# bronya-bot

./: .env.example  .gitignore  README.md  bot.py  config_example.py  pyproject.toml  requirements.txt  run-bronya.bat
assets/songs/: cyberangel-segment1.m4a
bronya/plugins/: current_time.py  dictionary.py  help.py  honkai3.py  info.py  lucky_guy.py  sing.py  translate.py  weather.py
bronya_bot/: config.py
bronya_bot/plugins/: chat.py  hello.py
bronya_bot/services/: chat_api.py
bronya_bot/services/sqlite/: sqlite_service.py
config/: time_reminder.json
scripts/: run-bronya.bat
utils/: file_utils.py  utils.py
