[project]
name = "bronya-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "googletrans>=4.0.2",
    "jieba>=0.42.1",
    "nonebot[scheduler]>=1.9.1",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler"]
