[project]
name = "bronya-bot"
version = "0.1.0"
description = "bronya-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-console>=0.9.0",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-docs>=2.4.4",
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-alconna>=0.60.4",
    "nonebot-plugin-filehost>=1.1.1",
    "nonebot-plugin-orm[default]>=0.8.3",
    "nonebot-plugin-htmlkit>=0.1.0rc5",
    "nonebot-adapter-qq>=1.6.6",
    "nonebot2[httpx]>=2.4.4",
    "bs4>=0.0.2",
    "googletrans>=4.0.2",
    "jieba>=0.42.1",
    "nonebot[scheduler]>=1.9.1",
    "pillow>=11.2.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-docs = ["nonebot_plugin_docs"]
nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-alconna = ["nonebot_plugin_alconna"]
nonebot-plugin-filehost = ["nonebot_plugin_filehost"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-htmlkit = ["nonebot_plugin_htmlkit"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true